// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Mysql DATA MANIPULATION INSERT should insert new entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 1n,
      "?1" => "TEST1",
      "?2" => 10,
    }
,
    "query": 
"INSERT INTO \`Table1One\`(\`table1Id\`,\`name\`,\`number\`) VALUES
(?,?,?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert new entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 2n,
      "?1" => "TEST2",
      "?2" => 20,
    }
,
    "query": 
"INSERT INTO \`Table1One\`(\`table1Id\`,\`name\`,\`number\`) VALUES
(?,?,?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert new entity 3 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 3n,
      "?1" => "TEST3",
      "?2" => 30,
    }
,
    "query": 
"INSERT INTO \`Table1One\`(\`table1Id\`,\`name\`,\`number\`) VALUES
(?,?,?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert new entity and update all insert generated column (createdDate, default) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "INSERT 1",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "INSERT 1",
        }
,
        "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 10n,
    }
,
    "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`bigint\`,
	\`entity0\`.\`binary\`,
	\`entity0\`.\`boolean\`,
	\`entity0\`.\`date\`,
	\`entity0\`.\`plainDate\`,
	\`entity0\`.\`dateTime\`,
	\`entity0\`.\`instant\`,
	\`entity0\`.\`decimal\`,
	\`entity0\`.\`decimalNumber\`,
	\`entity0\`.\`decimalDecimal\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`identifier\`,
	\`entity0\`.\`identifierString\`,
	\`entity0\`.\`integer\`,
	\`entity0\`.\`real\`,
	\`entity0\`.\`string\`,
	\`entity0\`.\`time\`,
	\`entity0\`.\`plainTime\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=?))
ORDER BY \`entity0\`.\`id\`
LIMIT 1"
,
    "type": 1,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 10n,
      "?1" => "detail 1",
      "?2" => 1,
      "?3" => 10n,
      "?4" => "detail 2",
      "?5" => 2,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 10n,
          "?1" => "detail 1",
          "?2" => 1,
        }
,
        "query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`table1Id\`,
	\`entity0\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => 10n,
          "?1" => "detail 2",
          "?2" => 2,
        }
,
        "query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`table1Id\`,
	\`entity0\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`table1Id\`,
	\`entity0\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`table1Id\`,
	\`entity0\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert entity with it relation correctly (auto pk) 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "?0" => "Insert 2",
    }
,
    "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "?0" => Anything,
      "?1" => "detail 1",
      "?2" => 1,
    }
,
    "query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`table1Id\`,
	\`entity1\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "?0" => Anything,
      "?1" => "detail 2",
      "?2" => 2,
    }
,
    "query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`table1Id\`,
	\`entity1\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "?0" => Anything,
      "?1" => "detail 21",
      "?2" => 2,
    }
,
    "query": 
"INSERT INTO \`Table1Manies\`(\`table1Id\`,\`name\`,\`integer\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`table1Id\`,
	\`entity1\`.\`deleted\`
FROM \`Table1Manies\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should trigger before/after save event 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Insert 1",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Insert 1",
        }
,
        "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should bulk insert 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"INSERT INTO \`Table1Manies\` (\`name\`)
SELECT (CONCAT('Detail of parent ', CAST(\`entity0\`.\`id\` AS nvarchar(max)))) AS \`column1\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
LEFT JOIN (
	SELECT \`entity1\`.\`table1Id\`,
		COUNT(\`entity1\`.*) AS \`column0\`
	FROM \`Table1Manies\` AS \`entity1\`
	WHERE (\`entity1\`.\`deleted\`=false)
	GROUP BY \`entity1\`.\`table1Id\`
) AS \`entity1\` ON (\`entity0\`.\`id\`=\`entity1\`.\`table1Id\`)
WHERE ((\`entity0\`.\`deleted\`=false) AND ((COALESCE(\`entity1\`.\`column0\`, 0))<=0))"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should bulk insert entity for non auto pk when updating more than 10 entity 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 1n,
      "?1" => "TEST1",
      "?2" => 10,
      "?3" => 2n,
      "?4" => "TEST2",
      "?5" => 20,
      "?6" => 3n,
      "?7" => "TEST3",
      "?8" => 30,
      "?9" => 4n,
      "?10" => "TEST4",
      "?11" => 40,
      "?12" => 5n,
      "?13" => "TEST5",
      "?14" => 50,
      "?15" => 6n,
      "?16" => "TEST6",
      "?17" => 60,
      "?18" => 7n,
      "?19" => "TEST7",
      "?20" => 70,
      "?21" => 8n,
      "?22" => "TEST8",
      "?23" => 80,
      "?24" => 9n,
      "?25" => "TEST9",
      "?26" => 90,
      "?27" => 10n,
      "?28" => "TEST10",
      "?29" => 100,
      "?30" => 11n,
      "?31" => "TEST11",
      "?32" => 110,
    }
,
    "query": 
"INSERT INTO \`Table1One\`(\`table1Id\`,\`name\`,\`number\`) VALUES
	(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)
	,(?,?,?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should do upsert 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 11,
      "?1" => "Original",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 11,
          "?1" => "Original",
        }
,
        "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,?,DEFAULT,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,?,DEFAULT,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert entity with loop type reference 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 21n,
      "?1" => 0n,
      "?2" => 22n,
      "?3" => 21n,
      "?4" => 51n,
      "?5" => 54n,
      "?6" => 31n,
      "?7" => 0n,
      "?8" => 33n,
      "?9" => 31n,
      "?10" => 54n,
      "?11" => 52n,
      "?12" => 33n,
      "?13" => 55n,
      "?14" => 51n,
      "?15" => 1n,
      "?16" => 0n,
      "?17" => 2n,
      "?18" => 32n,
      "?19" => 33n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 21n,
          "?1" => 0n,
        }
,
        "query": 
"INSERT INTO \`CycleDigon1\`(\`id\`,\`table1Id\`,\`cycleDigon2Id\`) VALUES
(?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 22n,
          "?1" => 21n,
        }
,
        "query": 
"INSERT INTO \`CycleDigon2\`(\`id\`,\`cycleDigon1Id\`) VALUES
(?,?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 51n,
        }
,
        "query": 
"INSERT INTO \`CyclePolygon1\`(\`id\`,\`cyclePolygon2Id\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 54n,
        }
,
        "query": 
"INSERT INTO \`CyclePolygon4\`(\`id\`,\`cyclePolygon5Id\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 31n,
          "?1" => 0n,
        }
,
        "query": 
"INSERT INTO \`CycleTriangle1\`(\`id\`,\`table1Id\`,\`cycleTriangle2Id\`) VALUES
(?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 33n,
          "?1" => 31n,
          "?2" => 54n,
        }
,
        "query": 
"INSERT INTO \`CycleTriangle3\`(\`id\`,\`cycleTriangle1Id\`,\`cyclePolygon4Id\`) VALUES
(?,?,?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 52n,
          "?1" => 33n,
        }
,
        "query": 
"INSERT INTO \`CyclePolygon2\`(\`id\`,\`cycleTriangle3Id\`) VALUES
(?,?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 55n,
          "?1" => 51n,
        }
,
        "query": 
"INSERT INTO \`CyclePolygon5\`(\`id\`,\`cyclePolygon1Id\`) VALUES
(?,?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
          "?1" => 0n,
          "?2" => 2n,
        }
,
        "query": 
"INSERT INTO \`CycleSelf\`(\`id\`,\`table1Id\`,\`parentId\`) VALUES
	(?,?,DEFAULT)
	,(?,DEFAULT,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 32n,
          "?1" => 33n,
        }
,
        "query": 
"INSERT INTO \`CycleTriangle2\`(\`id\`,\`cycleTriangle3Id\`) VALUES
(?,?)"
,
        "type": 2,
      },
    ],
    "_query": 
"INSERT INTO \`CycleDigon1\`(\`id\`,\`table1Id\`,\`cycleDigon2Id\`) VALUES
(?,?,DEFAULT);

INSERT INTO \`CycleDigon2\`(\`id\`,\`cycleDigon1Id\`) VALUES
(?,?);

INSERT INTO \`CyclePolygon1\`(\`id\`,\`cyclePolygon2Id\`) VALUES
(?,DEFAULT);

INSERT INTO \`CyclePolygon4\`(\`id\`,\`cyclePolygon5Id\`) VALUES
(?,DEFAULT);

INSERT INTO \`CycleTriangle1\`(\`id\`,\`table1Id\`,\`cycleTriangle2Id\`) VALUES
(?,?,DEFAULT);

INSERT INTO \`CycleTriangle3\`(\`id\`,\`cycleTriangle1Id\`,\`cyclePolygon4Id\`) VALUES
(?,?,?);

INSERT INTO \`CyclePolygon2\`(\`id\`,\`cycleTriangle3Id\`) VALUES
(?,?);

INSERT INTO \`CyclePolygon5\`(\`id\`,\`cyclePolygon1Id\`) VALUES
(?,?);

INSERT INTO \`CycleSelf\`(\`id\`,\`table1Id\`,\`parentId\`) VALUES
	(?,?,DEFAULT)
	,(?,DEFAULT,DEFAULT);

INSERT INTO \`CycleTriangle2\`(\`id\`,\`cycleTriangle3Id\`) VALUES
(?,?)"
,
    "_type": 2,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE \`CycleSelf\` AS \`entity10\`
INNER JOIN (
	SELECT 1 AS \`_ori_id\`, 2 AS \`parentId\`
	UNION ALL
	SELECT 2 AS \`_ori_id\`, 1 AS \`parentId\`
) AS \`update\` ON (\`entity10\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity10\`.\`parentId\` = \`update\`.\`parentId\`"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`CycleTriangle1\` AS \`entity11\`
INNER JOIN (
	SELECT 31 AS \`_ori_id\`, 32 AS \`cycleTriangle2Id\`
) AS \`update\` ON (\`entity11\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity11\`.\`cycleTriangle2Id\` = \`update\`.\`cycleTriangle2Id\`"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`CyclePolygon4\` AS \`entity12\`
INNER JOIN (
	SELECT 54 AS \`_ori_id\`, 55 AS \`cyclePolygon5Id\`
) AS \`update\` ON (\`entity12\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity12\`.\`cyclePolygon5Id\` = \`update\`.\`cyclePolygon5Id\`"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`CyclePolygon1\` AS \`entity13\`
INNER JOIN (
	SELECT 51 AS \`_ori_id\`, 52 AS \`cyclePolygon2Id\`
) AS \`update\` ON (\`entity13\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity13\`.\`cyclePolygon2Id\` = \`update\`.\`cyclePolygon2Id\`"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`CycleDigon1\` AS \`entity14\`
INNER JOIN (
	SELECT 21 AS \`_ori_id\`, 22 AS \`cycleDigon2Id\`
) AS \`update\` ON (\`entity14\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity14\`.\`cycleDigon2Id\` = \`update\`.\`cycleDigon2Id\`"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE \`CycleSelf\` AS \`entity10\`
INNER JOIN (
	SELECT 1 AS \`_ori_id\`, 2 AS \`parentId\`
	UNION ALL
	SELECT 2 AS \`_ori_id\`, 1 AS \`parentId\`
) AS \`update\` ON (\`entity10\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity10\`.\`parentId\` = \`update\`.\`parentId\`;

UPDATE \`CycleTriangle1\` AS \`entity11\`
INNER JOIN (
	SELECT 31 AS \`_ori_id\`, 32 AS \`cycleTriangle2Id\`
) AS \`update\` ON (\`entity11\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity11\`.\`cycleTriangle2Id\` = \`update\`.\`cycleTriangle2Id\`;

UPDATE \`CyclePolygon4\` AS \`entity12\`
INNER JOIN (
	SELECT 54 AS \`_ori_id\`, 55 AS \`cyclePolygon5Id\`
) AS \`update\` ON (\`entity12\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity12\`.\`cyclePolygon5Id\` = \`update\`.\`cyclePolygon5Id\`;

UPDATE \`CyclePolygon1\` AS \`entity13\`
INNER JOIN (
	SELECT 51 AS \`_ori_id\`, 52 AS \`cyclePolygon2Id\`
) AS \`update\` ON (\`entity13\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity13\`.\`cyclePolygon2Id\` = \`update\`.\`cyclePolygon2Id\`;

UPDATE \`CycleDigon1\` AS \`entity14\`
INNER JOIN (
	SELECT 21 AS \`_ori_id\`, 22 AS \`cycleDigon2Id\`
) AS \`update\` ON (\`entity14\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity14\`.\`cycleDigon2Id\` = \`update\`.\`cycleDigon2Id\`"
,
    "_type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert entity with auto pk and self reference nullable 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "1",
      "?1" => "2",
      "?2" => "3",
      "?3" => "4",
      "?4" => "5",
      "?5" => "6",
      "?6" => "7",
      "?7" => "8",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "1",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "2",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "3",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "4",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "5",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "6",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "7",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "8",
        }
,
        "query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAutoNull\`(\`name\`,\`parentId\`) VALUES
(?,DEFAULT);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAutoNull\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE \`CycleSelfAutoNull\` AS \`entity1\`
INNER JOIN (
	SELECT 11 AS \`_ori_id\`, 1 AS \`parentId\`
	UNION ALL
	SELECT 12 AS \`_ori_id\`, 11 AS \`parentId\`
	UNION ALL
	SELECT 13 AS \`_ori_id\`, 12 AS \`parentId\`
	UNION ALL
	SELECT 14 AS \`_ori_id\`, 13 AS \`parentId\`
	UNION ALL
	SELECT 15 AS \`_ori_id\`, 12 AS \`parentId\`
	UNION ALL
	SELECT 16 AS \`_ori_id\`, 2 AS \`parentId\`
	UNION ALL
	SELECT 17 AS \`_ori_id\`, 16 AS \`parentId\`
	UNION ALL
	SELECT 18 AS \`_ori_id\`, 16 AS \`parentId\`
) AS \`update\` ON (\`entity1\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity1\`.\`parentId\` = \`update\`.\`parentId\`"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION INSERT should insert entity with auto pk and self reference 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "1",
      "?1" => 1n,
      "?2" => "6",
      "?3" => 2n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "1",
          "?1" => 1n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "6",
          "?1" => 2n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "2",
      "?1" => 11n,
      "?2" => "7",
      "?3" => 16n,
      "?4" => "8",
      "?5" => 16n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "2",
          "?1" => 11n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "7",
          "?1" => 16n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "8",
          "?1" => 16n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "3",
      "?1" => 12n,
      "?2" => "4",
      "?3" => 12n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "3",
          "?1" => 12n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity2\`.\`id\`,
	\`entity2\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity2\`
WHERE (\`entity2\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
      {
        "parameters": 
Map {
          "?0" => "4",
          "?1" => 12n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity2\`.\`id\`,
	\`entity2\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity2\`
WHERE (\`entity2\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity2\`.\`id\`,
	\`entity2\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity2\`
WHERE (\`entity2\`.\`id\`=LAST_INSERT_ID());

INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity2\`.\`id\`,
	\`entity2\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity2\`
WHERE (\`entity2\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "5",
      "?1" => 13n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "5",
          "?1" => 13n,
        }
,
        "query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity3\`.\`id\`,
	\`entity3\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity3\`
WHERE (\`entity3\`.\`id\`=LAST_INSERT_ID())"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`CycleSelfAuto\`(\`table1Id\`,\`name\`,\`parentId\`) VALUES
(DEFAULT,?,?);

SELECT \`entity3\`.\`id\`,
	\`entity3\`.\`id\`
FROM \`CycleSelfAuto\` AS \`entity3\`
WHERE (\`entity3\`.\`id\`=LAST_INSERT_ID())"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
    }
,
    "query": 
"UPDATE \`Table1One\` AS \`entity0\`
SET \`entity0\`.\`name\` = ?
WHERE (\`entity0\`.\`table1Id\`=?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "Updated",
      "?1" => 11,
      "?2" => 1n,
    }
,
    "query": 
"UPDATE \`Table1One\` AS \`entity0\`
SET \`entity0\`.\`name\` = ?,
	\`entity0\`.\`number\` = ?
WHERE (\`entity0\`.\`table1Id\`=?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should bulk update entity 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "Updated",
    }
,
    "query": 
"UPDATE \`Table1One\` AS \`entity0\`
SET \`entity0\`.\`name\` = ?,
	\`entity0\`.\`number\` = (\`entity0\`.\`number\`+100)
WHERE (\`entity0\`.\`table1Id\`=1)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should bulk update entity with paging 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "Updated",
      "?1" => 100.12,
      "?2" => 100,
      "?3" => 99.99,
      "?4" => 99.99,
      "?5" => 50,
      "?6" => 100,
    }
,
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT \`entity0\`.\`id\`
	FROM \`fixture\`.\`Table1s\` AS \`entity0\`
	WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`integer\`>?) AND (\`entity0\`.\`real\`<=>?) AND ((COALESCE(\`entity0\`.\`real\`, 0))=?))
	ORDER BY \`entity0\`.\`id\`
	LIMIT ? OFFSET ?
) AS \`entity0_1\` ON (\`entity0\`.\`id\`=\`entity0_1\`.\`id\`)
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`real\` = (\`entity0\`.\`real\`+?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update with DIRTY concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "Updated",
      "?1" => 2n,
      "?2" => "TEST2",
    }
,
    "query": 
"UPDATE \`Table1One\` AS \`entity0\`
SET \`entity0\`.\`name\` = ?
WHERE ((\`entity0\`.\`table1Id\`=?) AND (\`entity0\`.\`name\`=?))"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update with VERSION concurrency check 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1,
      "?2" => Uint8Array [
        1,
        200,
        0,
        0,
        100,
      ],
      "?3" => 1,
      "?4" => Uint8Array [
        1,
        200,
        0,
        0,
        100,
      ],
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1,
          "?2" => Uint8Array [
            1,
            200,
            0,
            0,
            100,
          ],
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table2s\` AS \`entity0\`
SET \`entity0\`.\`t2Name\` = ?
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`rowVersion\`=?))"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1,
          "?1" => Uint8Array [
            1,
            200,
            0,
            0,
            100,
          ],
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`rowVersion\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`rowVersion\`
FROM \`fixture\`.\`Table2s\` AS \`entity0\`
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`rowVersion\`=?))"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table2s\` AS \`entity0\`
SET \`entity0\`.\`t2Name\` = ?
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`rowVersion\`=?));

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`rowVersion\`,
	\`entity0\`.\`id\`,
	\`entity0\`.\`rowVersion\`
FROM \`fixture\`.\`Table2s\` AS \`entity0\`
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`rowVersion\`=?))"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update with VERSION concurrency check (fallback to ModifiedDate) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
      "?2" => "1971-01-02T00:00:00Z",
      "?3" => 1n,
      "?4" => "1971-01-02T00:00:00Z",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1n,
          "?2" => "1971-01-02T00:00:00Z",
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`modifiedDate\`=?))"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
          "?1" => "1971-01-02T00:00:00Z",
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`modifiedDate\`=?))"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`modifiedDate\`=?));

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`id\`=?) AND (\`entity0\`.\`modifiedDate\`=?))"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update without concurrency check 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
      "?2" => 1n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1n,
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update ModifiedDate 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
      "?2" => 1n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1n,
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should not update Readonly Column, ex: CreatedDate 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
      "?2" => 1n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1n,
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should trigger before/after save event 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => "Updated",
      "?1" => 1n,
      "?2" => 1n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => "Updated",
          "?1" => 1n,
        }
,
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`string\` = ?,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`id\`=?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 1n,
    }
,
    "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`bigint\`,
	\`entity0\`.\`binary\`,
	\`entity0\`.\`boolean\`,
	\`entity0\`.\`date\`,
	\`entity0\`.\`plainDate\`,
	\`entity0\`.\`dateTime\`,
	\`entity0\`.\`instant\`,
	\`entity0\`.\`decimal\`,
	\`entity0\`.\`decimalNumber\`,
	\`entity0\`.\`decimalDecimal\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`identifier\`,
	\`entity0\`.\`identifierString\`,
	\`entity0\`.\`integer\`,
	\`entity0\`.\`real\`,
	\`entity0\`.\`string\`,
	\`entity0\`.\`time\`,
	\`entity0\`.\`plainTime\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=?))
ORDER BY \`entity0\`.\`id\`
LIMIT 1"
,
    "type": 1,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 1n,
      "?1" => 1n,
      "?2" => 1n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 1n,
          "?1" => 1n,
        }
,
        "query": 
"UPDATE \`Table1Manies\` AS \`entity0\`
SET \`entity0\`.\`table1Id\` = ?
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 1n,
        }
,
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"UPDATE \`Table1Manies\` AS \`entity0\`
SET \`entity0\`.\`table1Id\` = ?
WHERE (\`entity0\`.\`id\`=?);

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`
FROM \`Table1Manies\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should update relation value to inserted relation entity's identity 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,DEFAULT)"
,
    "type": 2,
  },
  {
    "parameters": Map {},
    "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=LAST_INSERT_ID())"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "?0" => Anything,
      "?1" => 1n,
    }
,
    "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`table1Id\` = ?
WHERE (\`entity1\`.\`id\`=?)"
,
    "type": 2,
  },
  {
    "parameters": 
Map {
      "?0" => 1n,
    }
,
    "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`
FROM \`Table1Manies\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
    "type": 1,
  },
]
`;

exports[`Mysql DATA MANIPULATION UPDATE should do upsert 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 11,
      "?1" => "Updated",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 11,
          "?1" => "Updated",
        }
,
        "query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,?,DEFAULT,DEFAULT) AS \`entity0\`ON DUPLICATE KEY UPDATE
	\`modifiedDate\` = UTC_TIMESTAMP(),
	\`string\` = \`entity0\`.\`string\`
RETURNING \`entity0\`.\`id\`,\`entity0\`.\`computed\` AS \`computed\`,\`entity0\`.\`createdDate\`,\`entity0\`.\`modifiedDate\`,\`entity0\`.\`deleted\`,\`entity0\`.\`integer\`"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT NULL AS \`id\`
) AS \`inserted\` ON (\`entity0\`.\`id\`=\`inserted\`.\`id\`)"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`fixture\`.\`Table1s\`(\`bigint\`,\`binary\`,\`boolean\`,\`date\`,\`plainDate\`,\`dateTime\`,\`instant\`,\`decimal\`,\`decimalNumber\`,\`decimalDecimal\`,\`deleted\`,\`identifier\`,\`identifierString\`,\`integer\`,\`real\`,\`string\`,\`time\`,\`plainTime\`) VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,?,DEFAULT,?,DEFAULT,DEFAULT) AS \`entity0\`ON DUPLICATE KEY UPDATE
	\`modifiedDate\` = UTC_TIMESTAMP(),
	\`string\` = \`entity0\`.\`string\`
RETURNING \`entity0\`.\`id\`,\`entity0\`.\`computed\` AS \`computed\`,\`entity0\`.\`createdDate\`,\`entity0\`.\`modifiedDate\`,\`entity0\`.\`deleted\`,\`entity0\`.\`integer\`;

SELECT \`entity0\`.\`id\`,
	\`entity0\`.\`id\`,
	(\`entity0\`.\`integer\`+\`entity0\`.\`decimalNumber\`) AS \`computed\`,
	\`entity0\`.\`createdDate\`,
	\`entity0\`.\`modifiedDate\`,
	\`entity0\`.\`deleted\`,
	\`entity0\`.\`integer\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT NULL AS \`id\`
) AS \`inserted\` ON (\`entity0\`.\`id\`=\`inserted\`.\`id\`)"
,
    "_type": 3,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete entity (soft delete) + should update modifiedDate 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete entity (hard delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"DELETE \`entity0\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete entity with key (soft delete) 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 1n,
    }
,
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=?))"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete entity with key (hard delete) 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 1n,
    }
,
    "query": 
"DELETE \`entity0\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE (\`entity0\`.\`id\`=?)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should bulk delete entity (soft delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 100,
      "?1" => 99.99,
      "?2" => 99.99,
      "?3" => 50,
      "?4" => 100,
    }
,
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT \`entity0\`.\`id\`
	FROM \`fixture\`.\`Table1s\` AS \`entity0\`
	WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`integer\`>?) AND (\`entity0\`.\`real\`<=>?) AND ((COALESCE(\`entity0\`.\`real\`, 0))=?))
	ORDER BY \`entity0\`.\`id\`
	LIMIT ? OFFSET ?
) AS \`entity0_1\` ON (\`entity0\`.\`id\`=\`entity0_1\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should bulk delete entity (hard delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "?0" => 100,
      "?1" => 99.99,
      "?2" => 99.99,
    }
,
    "query": 
"DELETE \`entity0\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`integer\`>?) AND (\`entity0\`.\`real\`<=>?) AND ((COALESCE(\`entity0\`.\`real\`, 0))=?))"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should bulk delete with include (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1));

UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
    "_type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should bulk delete with include (hard delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"DELETE \`entity0\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"DELETE \`entity1\`
FROM \`Table1Manies\` AS \`entity1\`
INNER JOIN (
	SELECT \`entity0\`.\`id\`,
		\`entity0\`.\`bigint\`,
		\`entity0\`.\`binary\`,
		\`entity0\`.\`boolean\`,
		\`entity0\`.\`date\`,
		\`entity0\`.\`plainDate\`,
		\`entity0\`.\`dateTime\`,
		\`entity0\`.\`instant\`,
		\`entity0\`.\`decimal\`,
		\`entity0\`.\`decimalNumber\`,
		\`entity0\`.\`decimalDecimal\`,
		\`entity0\`.\`deleted\`,
		\`entity0\`.\`identifier\`,
		\`entity0\`.\`identifierString\`,
		\`entity0\`.\`integer\`,
		\`entity0\`.\`real\`,
		\`entity0\`.\`string\`,
		\`entity0\`.\`time\`,
		\`entity0\`.\`plainTime\`,
		\`entity0\`.\`createdDate\`,
		\`entity0\`.\`modifiedDate\`
	FROM \`fixture\`.\`Table1s\` AS \`entity0\`
	WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1))
) AS \`entity0\` ON (\`entity0\`.\`id\`=\`entity1\`.\`table1Id\`)
WHERE (\`entity1\`.\`deleted\`=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DELETE \`entity0\`
FROM \`fixture\`.\`Table1s\` AS \`entity0\`
WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1));

DELETE \`entity1\`
FROM \`Table1Manies\` AS \`entity1\`
INNER JOIN (
	SELECT \`entity0\`.\`id\`,
		\`entity0\`.\`bigint\`,
		\`entity0\`.\`binary\`,
		\`entity0\`.\`boolean\`,
		\`entity0\`.\`date\`,
		\`entity0\`.\`plainDate\`,
		\`entity0\`.\`dateTime\`,
		\`entity0\`.\`instant\`,
		\`entity0\`.\`decimal\`,
		\`entity0\`.\`decimalNumber\`,
		\`entity0\`.\`decimalDecimal\`,
		\`entity0\`.\`deleted\`,
		\`entity0\`.\`identifier\`,
		\`entity0\`.\`identifierString\`,
		\`entity0\`.\`integer\`,
		\`entity0\`.\`real\`,
		\`entity0\`.\`string\`,
		\`entity0\`.\`time\`,
		\`entity0\`.\`plainTime\`,
		\`entity0\`.\`createdDate\`,
		\`entity0\`.\`modifiedDate\`
	FROM \`fixture\`.\`Table1s\` AS \`entity0\`
	WHERE ((\`entity0\`.\`deleted\`=false) AND (\`entity0\`.\`id\`=1))
) AS \`entity0\` ON (\`entity0\`.\`id\`=\`entity1\`.\`table1Id\`)
WHERE (\`entity1\`.\`deleted\`=false)"
,
    "_type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should not cascade delete entity when not enabled (soft delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should cascade delete entity + relation (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TEMPORARY TABLE IF EXISTS \`delete\`",
        "type": 4,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
)"
,
        "type": 4,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO \`delete\`(\`id\`) VALUES
(1)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TEMPORARY TABLE IF EXISTS \`delete\`;

CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
);

INSERT INTO \`delete\`(\`id\`) VALUES
(1);

UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false);

UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
    "_type": 6,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete with SET NULL option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TEMPORARY TABLE IF EXISTS \`delete\`",
        "type": 4,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
)"
,
        "type": 4,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO \`delete\`(\`id\`) VALUES
(1)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`table1Id\` = NULL"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TEMPORARY TABLE IF EXISTS \`delete\`;

CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
);

INSERT INTO \`delete\`(\`id\`) VALUES
(1);

UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false);

UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`table1Id\` = NULL"
,
    "_type": 6,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete with SET DEFAULT option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TEMPORARY TABLE IF EXISTS \`delete\`",
        "type": 4,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
)"
,
        "type": 4,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO \`delete\`(\`id\`) VALUES
(1)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`table1Id\` = 0"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TEMPORARY TABLE IF EXISTS \`delete\`;

CREATE TEMPORARY TABLE \`delete\`
(
	\`id\` bigint
);

INSERT INTO \`delete\`(\`id\`) VALUES
(1);

UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN \`delete\` AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false);

UPDATE \`Table1Manies\` AS \`entity1\`
SET \`entity1\`.\`table1Id\` = 0"
,
    "_type": 6,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should trigger before/after delete event 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION DELETE should delete with correct order 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 10 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE \`Table1Manies\` AS \`entity1\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity1\`.\`id\`=\`delete\`.\`id\`)
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE \`fixture\`.\`Table1s\` AS \`entity0\`
INNER JOIN (
	SELECT 10 AS \`id\`
) AS \`delete\` ON (\`entity0\`.\`id\`=\`delete\`.\`id\`)
SET \`entity0\`.\`deleted\` = true,
	\`entity0\`.\`modifiedDate\` = UTC_TIMESTAMP()
WHERE (\`entity0\`.\`deleted\`=false);

UPDATE \`Table1Manies\` AS \`entity1\`
INNER JOIN (
	SELECT 1 AS \`id\`
) AS \`delete\` ON (\`entity1\`.\`id\`=\`delete\`.\`id\`)
SET \`entity1\`.\`deleted\` = true
WHERE (\`entity1\`.\`deleted\`=false)"
,
    "_type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION SAVE should unblock insert unique constraint hard delete: set null 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE \`Unblock\` AS \`entity0\`
INNER JOIN (
	SELECT 10 AS \`_ori_id\`, NULL AS \`unique\`, 1 AS \`__flag\`
) AS \`update\` ON (\`entity0\`.\`id\`=\`update\`.\`_ori_id\`)
SET \`entity0\`.\`unique\` = (
	CASE WHEN (((\`update\`.\`__flag\`&1)=0)) 
	THEN \`entity0\`.\`unique\`
	ELSE \`update\`.\`unique\`
	END
)"
,
    "type": 2,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 11n,
      "?1" => 0n,
      "?2" => "new",
      "?3" => 11n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 11n,
          "?1" => 0n,
          "?2" => "new",
        }
,
        "query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 11n,
        }
,
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
    "_type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"DELETE \`entity2\`
FROM \`Unblock\` AS \`entity2\`
INNER JOIN (
	SELECT 10 AS \`id\`
) AS \`delete\` ON (\`entity2\`.\`id\`=\`delete\`.\`id\`)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION SAVE should unblock insert unique constraint: set new value 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 11n,
      "?1" => 0n,
      "?2" => "new",
      "?3" => 11n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 11n,
          "?1" => 0n,
          "?2" => "new",
        }
,
        "query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 11n,
        }
,
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
    "_type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE \`Unblock\` AS \`entity2\`
INNER JOIN (
	SELECT 10 AS \`id\`
) AS \`delete\` ON (\`entity2\`.\`id\`=\`delete\`.\`id\`)
SET \`entity2\`.\`deleted\` = true
WHERE (\`entity2\`.\`deleted\`=false)"
,
    "type": 2,
  },
]
`;

exports[`Mysql DATA MANIPULATION SAVE should unblock insert unique constraint: ignore 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "?0" => 11n,
      "?1" => 0n,
      "?2" => "new",
      "?3" => 11n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "?0" => 11n,
          "?1" => 0n,
          "?2" => "new",
        }
,
        "query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "?0" => 11n,
        }
,
        "query": 
"SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
        "type": 1,
      },
    ],
    "_query": 
"INSERT INTO \`Unblock\`(\`id\`,\`unique\`,\`name\`,\`deleted\`) VALUES
(?,?,?,DEFAULT);

SELECT \`entity1\`.\`id\`,
	\`entity1\`.\`id\`,
	\`entity1\`.\`deleted\`
FROM \`Unblock\` AS \`entity1\`
WHERE (\`entity1\`.\`id\`=?)"
,
    "_type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE \`Unblock\` AS \`entity2\`
INNER JOIN (
	SELECT 10 AS \`id\`
) AS \`delete\` ON (\`entity2\`.\`id\`=\`delete\`.\`id\`)
SET \`entity2\`.\`deleted\` = true
WHERE (\`entity2\`.\`deleted\`=false)"
,
    "type": 2,
  },
]
`;
